objects/K12_Report_Link__mdt.object
<CustomObject>
    <fields>
        <fullName>Report_Description__c</fullName>
        <label>Report Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Label__c</fullName>
        <label>Report Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <label>Report Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorting__c</fullName>
        <label>Sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>K12_Report_Link</label>
    <pluralLabel>K12_Report_Links</pluralLabel>
</CustomObject>